Correctins are complete

--- a/jss-anukramanike1.tex
+++ b/jss-anukramanike1.tex
@@ -3341,8 +3341,6 @@
 
 {tavxmf}, \pageref{tavxmf}
 
-{terxYliMga}, \pageref{terxYliMga1}
-
 {tAMtirxkapUjA}, \pageref{tAMtirxkapUjA}
 
 {tAMtirxkapUjAkarxma}, \pageref{tAMtirxkapUjAkarxma}
@@ -4747,8 +4745,6 @@
 
 {paMcakaMcuka}, \pageref{paMcakaMcuka}
 
-{paMcaBUta}, \pageref{paMcaBUta1}
-
 {paMcakameRVMdirxya}, \pageref{paMcakameRVMdirxya}
 
 {paMcakala(La)sha}, \pageref{paMcakalaLasha}
@@ -4965,15 +4961,13 @@
 
 {paMcAshatfrudarx}, \pageref{paMcAshatfrudarx}
 
-{paMciVkaraNa}, \pageref{paMciVkaraNa1}
-
 {paMcAsatxrXmaMtarx}, \pageref{paMcAsatxrXmaMtarx}
 
 {paMcAsatxrXmahAmaMtarx}, \pageref{paMcAsatxrXmahAmaMtarx}
 
 {paMcAsayx}, \pageref{paMcAsayx}
 
-{paMciVkaraNa}, \pageref{paMciVkaraNa2}
+{paMciVkaraNa}, \pageref{paMciVkaraNa}
 
 {paMciVkaqta}, \pageref{paMciVkaqta}
 
@@ -5296,8 +5290,6 @@
 {parxsAda}, \pageref{parxsAda}
 
 {parxsAdavAkayx}, \pageref{parxsAdavAkayx}
-
-{parxsAdavikAri}, \pageref{parxsAdavikAri1}
 
 {parxsAdakamaR}, \pageref{parxsAdakamaR}
 
@@ -8740,8 +8732,6 @@
 {sapuSapxshiVla}, \pageref{sapuSapxshiVla}
 
 {saparxkAMDashiVla}, \pageref{saparxkAMDashiVla}
-
-{sapatxmAtaqke}, \pageref{sapatxmAtaqke2}
 
 {sapotxVdaka}, \pageref{sapotxVdaka}
 
