--- a/tex-for-print/jss-001-281.tex
+++ b/tex-for-print/jss-001-281.tex
@@ -28547,7 +28547,7 @@ AtAmxnoV bahavaH saMti cidUrxpA maladUSitAH |\\[1pt]
 mAyAkamaRmaloVpeVtA kalAdayxvanigoVcareV ||\\[-2pt]
 \end{shl}
 \smallskip
-\pauthor{Agama ??-??-??}
+\pauthor{(Agama)}
 \smallskip
 \newmeaning{\ullekha{jiVvAtamx aMtarAtamxna sudidxya besagoMbaDe heVLihe keVLi BoV. husiye saMkaleyAgidadxlilx kAdukoMDidadxnobabx, kathe kanasa mADi heVLutitxdadxnobabx (savasaM. 1; basava. 927-244); bahiraMgAvasethxyalilxruva jiVvAtamxnu tAmasaguNadiMda kUDi jiVvAtamx aMtarAtamx paramAtamxreMdAtamxtarxyaMgaLavaralilx tapAtxyaH piMDadaMte deVhAdigaLoDetana saMbaMdhadiM sakala saMsAra vayxvahAramuLALxtaneV jiVvAtamxnu (viveVka. 25); aMga beVre liMga beVreMdu liMgAMgaveraDakUkx BinanxviTuTx koMDArAdhisu\-vaMtha sidAdhxMtiyu (basaTiV. {\rm\em{II}}, 282-928 TiVku).}}
 \vskip 2pt
