--- a/tex-for-print/jss-282-501.tex
+++ b/tex-for-print/jss-282-501.tex
@@ -1228,12 +1228,12 @@ liMgaM tatapxdamAKAyxtamaMgaM tavxM padamiVritamf |
 %\newmeaning{\ni{tAMDavamUtiRH, tAMDavasayx mUtiRH-tAMDavamUtiRH}}
 %\end{entry}
 
-\begin{entry}
-\word{terxYliMga}\label{terxYliMga1}
-\src{va}
-\meaning{\arthanonum{iSaTxliMga, pArxNaliMga matutx BAvaliMgagaLeMba tirxvidha liMga\-gaLu:}
-\ullekha{saMsAra divxradavanu hosedu biTeTxY taMde vashamADikoTeTxyayAyx terxYliMga mUlamatava (savasaM. 4; sidadhxrA. 1047-302).}}
-\end{entry}
+%\begin{entry}
+%\wword{terxYliMga}\llabel{terxYliMga1}
+%\src{va}
+%\meaning{\arthanonum{iSaTxliMga, pArxNaliMga matutx BAvaliMgagaLeMba tirxvidha liMga\-gaLu:}
+%\ullekha{saMsAra divxradavanu hosedu biTeTxY taMde vashamADikoTeTxyayAyx terxYliMga mUlamatava (savasaM. 4; sidadhxrA. 1047-302).}}
+%\end{entry}
 
 \begin{entry}
 \word{tAMtirxkapUjA}\label{tAMtirxkapUjA}
@@ -5597,10 +5597,10 @@ vAmaM ca dakiSxNaM ceYva misharxM sidAdhxMtasaMjacnxkamf ||\\[1pt]
 \smallskip
 \begin{shl}
 adevxYtaBakitxyukatxsayx yoVginaH sakalakirxyAH |\\[1pt]
-AsetxV dagadhxpaTanAyxyAtf kirxyAmAtarxM hi na kirxyA ||
+AsetxV dagadhxpaTanAyxyAtf kirxyAmAtArx hi na kirxyA ||
 \end{shl}
 \medskip
-\pauthor{(shivAsU. ?? -136)}
+\pauthor{(shivAsU. 8-50-136)}
 \newmeaning{\ullekha{suLidaDe oDalilalx niMdaDe neLalilalx naDedaDe gamanavilalx nuDidaDe shabadxvilalx dagadhxpaTanAyxyavAgi (savasaM. 6; Adayayx. 1135-355); suLidaDe oDalilalx, niMdaDe neLalilalx, naDedaDe gamanavilalx, nuDidaDe shabadxvilalx. dagadhxpaTanAyxyada hAge, uMDaDe upAdhiyilalx uNaNxdidadxDe kAMkeSxyilalx (savasaM. 7; GaTiTxvA. 538-178); cidebxLaginalilx shoVBisuva basavaNaNx, cenanxbasavaNaNx, parxBu, sidadhxrAma parxmathagaNaMgaLa mahAparxsAda beLagige yoVgayx\-rAgi dagadhxpaTanAyxya, urivuMDa kapURradaMtAdevu noVDa saMganabasaveVshavxra (savasaM. 10; gurusi. 760-445);\break bacacxbariya bayalabarxhamxve tananx nijada nilaveMdu tiLidu, dagadhx\-paTanAyxyadaMte deVhaviduR nideRVhiyAgidaRnayAyx nimamx sharaNa aKaMDeVshavxrA (savasaM. 14; SaNumxKa. 938-424).}}
 \end{entry}
 %dagadhxpaTanAyxya, yathAsevxVcaCx tananx niluvu adArige vinamxya, agoVcara. (savasaM. 9; saMapapx. 300-103);
@@ -13261,13 +13261,13 @@ ArAgAdAkalAtatatxvXM mishArxdhAvxKayxM tu paMcakamf ||
 \newmeaning{\arthanonum{\SEE{SaTftirxMshatftatatxvX}}}
 \end{entry}
 
-\begin{entry}
-\word{paMcaBUta}\label{paMcaBUta1}
-\src{kA}
-\meaning{\arthanonum{paqthivx, apupx, teVjasusx, vAyu matutx AkAsha\-gaLeMba aidu tatatxvX\-gaLu:}
-\ullekha{\hbox{hiDida} paMcaBUtagaDaNadoDa\-leMbudaM oDeyariMgoDaveyaM koDu (\hbox{diVkASxboV.} 10-5).}}
+%\begin{entry}
+%\wword{paMcaBUta}\llabel{paMcaBUta1}
+%\src{kA}
+%\meaning{\arthanonum{paqthivx, apupx, teVjasusx, vAyu matutx AkAsha\-gaLeMba aidu tatatxvX\-gaLu:}
+%\ullekha{\hbox{hiDida} paMcaBUtagaDaNadoDa\-leMbudaM oDeyariMgoDaveyaM koDu (\hbox{diVkASxboV.} 10-5).}}
 %\newmeaning{\ni{paMcakaM ca tatf BUtaM ca - paMcakaBUtaM}}
-\end{entry}
+%\end{entry}
 
 \begin{entry}
 \word{paMcakameRVMdirxya}\label{paMcakameRVMdirxya}
@@ -15448,34 +15448,6 @@ dAvxvitAyxcAraliMgAdisathxlaSaTakxsamAsharxyAH ||\\[-2pt]
 \newmeaning{\ni{paMcAshatfsaMKAyxkAH rudArxH - paMcAshadurxdArxH}}
 \end{entry}
 
-\begin{entry}
-\word{paMciVkaraNa}\label{paMciVkaraNa1}
-\meaning{\arthanonum{ipapxtetxYdu tatatxvXgaLa utapxtitxge anukUla\-vAgiruva paqthivx, apf, teVjasf, vAyu, AkAshagaLeMba paMcamahA\-BUtagaLalilx parxtiyoMdanUnx aidaneya oMdu BAgavAgi vagiRVkaraNa mADuva parxkirxye. I riVtiyAgi parxteyxVkisalapxTaTx aMshagaLanunx vayxvasithxtavAgi seVrisuvudariMda ipapxtetxYdu tatatxvXgaLa utapxtitxyAguvike. parxtiyoMdu mahABUtada eraDaneya BAgadalilx (25$\%$) uLida BUtagaLa adhaRBAgAMsha\-gaLanunx seVrisabeVku.}}
-\medskip
-\begin{shl}
-EkeYkaM divxvidhaM kaqtAvx taterxYkeYkaM paqthagf disheVtf ||\\[2pt]
-shiSeTxYkaM samAdAya punashacx viBajeVdf divxdhA |\\[2pt]
-divxdhA viBaketxV tatetxYkaM saMsAthxpayxnayxM catuviRdhamf ||\\[2pt]
-kuyARdeVvaM viBAgeV sAyxtf BUtameVkaM tu SaDivxdhamf |\\[2pt]
-sUthxlAMshAnf paMcaBUtAnAM paqthageVva vinikiSxpeVtf ||\\[2pt]
-paMcaviMshatitatAtxvXni BUtAMsheYH paMcapaMcaBiH |\\
-\end{shl}
-\medskip
-\pauthor{(shi.tara., BA-1, 1.7.45-48)}
-\medskip
-\newmeaning{\arthanonum{AkAshatatatxvXgaLu (AkAshatatatxvXdiMda uMTAguva paMcakagaLu): AkAshadalilx AkAshatatatxvXda seVruvikeyiMda jAcnxna (100{\boldmath$\%$}), AkAshadalilx vAyuvina seVruvikeyiMda manasusx (AkAsha\break 75{\boldmath$\%$} + vAyu 25{\boldmath$\%$}); AkAshadalilx teVjasisxna aMshada seVruvikeyiMda budidhx (AkAsha 75{\boldmath$\%$} + teVjasf 25{\boldmath$\%$}); AkAshadalilx jalAMsha seVruvikeyiMda citatx (AkAsha 75{\boldmath$\%$} + jala 25{\boldmath$\%$}); AkAshadalilx BUmayxMshada seVruvikeyiMda ahaMkAra (AkAsha 75{\boldmath$\%$} + BUmi 25{\boldmath$\%$})gaLa utapxtitx.}}
-\vskip 6pt
-\newmeaning{\arthanonum{vAyutatatxvXgaLu (vAyutatatxvXdiMda uMTAguva paMcakagaLu): vAyuvinalilx vAyutatatxvXda seVruvike\-yiMda vAyxna (100{\boldmath$\%$}); vAyuvinalilx AkAshatatatxvXda seVruvike\-yiMda samAna (vAyu 75{\boldmath$\%$} + AkAsha 25{\boldmath$\%$}); vAyuvinalilx teVjasisxna aMshada seVruvikeyiMda udAna (vAyu 75{\boldmath$\%$} + teVjasf 25{\boldmath$\%$}); vAyuvinalilx jalAMshada seVruvikeyiMda apAna (vAyu 75{\boldmath$\%$} + jala 25{\boldmath$\%$}); vAyuvinalilx BUmiya aMshada seVruvikeyiMda pArxNa (vAyu 75{\boldmath$\%$} + BUmi 25{\boldmath$\%$})gaLa utapxtitx.}}
-\vskip 6pt
-\newmeaning{\arthanonum{teVjasf tatatxvXgaLu (teVjasf tatatxvXda seVrivike\-yiMda uMTAguva paMcakagaLu): teVjasisxnalilx teVjsf tatatxvXda seVruvike\-yiMda kaNuNx (100{\boldmath$\%$}), teVjasisxnalilx AkAshAMshada seVruvike\-yiMda kivi (teVjasf 75{\boldmath$\%$} + AkAsha 25{\boldmath$\%$}); teVjasisxnalilx vAyavxMshada seVruvikeyiMda camaR (teVjsf 75{\boldmath$\%$}\break + vAyu 25{\boldmath$\%$}); teVjasisxnalilx jalAMshada seVruvikeyiMda\break nAlage (teVjsf 75{\boldmath$\%$} + jala 25{\boldmath$\%$}); teVjasisxnalilx \hbox{BUmayxMshada} seVruvikeyiMda mUgu (teVjsf 75{\boldmath$\%$} + BUmi 25{\boldmath$\%$})gaLu utapxtitxyAgutatxve.}}
-\vskip 6pt
-\newmeaning{\arthanonum{jalatatatxvXgaLu (jalatatatxvXkekx itara tatatxvXgaLa seVruvikeyiMda uMTAguva tatatxvXgaLu): jalakekx jaladaMshada seVruvikeyiMda rasa (100\%); jalakekx AkAshAMshada seVruvikeyiMda shabadx (jala 75\% + AkAsha 25\%); jalakekx vAyavxMshada seVruvikeyiMda sapxshaR (jala 75\% + vAyu 25\%); jalakekx teVjasisxna aMshada seVruvikeyiMda rUpa (jala 75\% + teVjasf 25\%); jalakekx paqthavxyXMshada seVruvikeyiMda gaMdha (jala 75\% + BUmi 25\%)gaLa utapxtitx.}}
-\vskip 6pt
-\newmeaning{\arthanonum{paqthivx tatatxvXgaLu (paqthivx tatatxvXkekx itara tatatxvXgaLa seVruvikeyiMda uMTAguva tatatxvXgaLu): paqthivxge paqthavxyXMshada seVruvikeyiMda pAyu (100\%); paqthivxge AkAshAMshada seVruvikeyiMda vAkf (paqthivx 75\% + AkAsha 25\%); paqthivxge vAyavxMshada seVruvike\-yiMda pANi (paqthivx 75\% + vAyu 25\%); paqthivxge teVjasisxna aMshada seVruvikeyiMda pAda (paqthivx 75\% + teVjasf 25\%); paqthivxge jalAMshada seVruvikeyiMda upasathx (paqthivx 75\% + jala 25\%)gaLa utapxtitx.}}
-\smallskip
-\pauthor{(shi.ta.ra., BAga-1, 1-7. 48-55)}
-\end{entry}
-
 \vskip 3pt
 
 \begin{entry}
@@ -15517,7 +15489,7 @@ paMcAsayxvAhini paMceVshavarade parx | paMcelalxdagajAte pAhi\\[-1pt]
 \vskip 3pt
 
 \begin{entry}
-\word{paMciVkaraNa}\label{paMciVkaraNa2}
+\word{paMciVkaraNa}\label{paMciVkaraNa}
 \meaning{\artha{paqthivx, apupx, teVja, vAyu, AkAshagaLeMba aidu sUkaSxmXvasutxgaLalilx parxteyxVka parxteyxVkavAgiruva aideYdu tatatxvX\-gaLu. ivu paMcaBUtagaLalilx parxtiyoMdakUkx beretAga, manuSayxna kameRVMdirxya\-gaLu, jAcnxneVMdirxya\-gaLu, paMca\-vAyu\-gaLu, paMcaviSaya\-gaLu, karaNacatuSaTxya\-gaLu utapxtitx\-yAguva parxkirxye:}
 \ullekha{paMciVkaraNa kirxyadiMdalalxde deVha\-diMdariyabAradu (savasaM. 4; sidadhxrA. 1909-546); A paMca\-BUtaMgaLeV paMciVkaraNavaneyidx AtamxMge aMgavAyitutx (savasaM. 5; akakxma. 58-21); iMtiV paMciVkaraNaMgaLa viBAgisi sUtarxviTuTx oMdariMda halavu lekakxva saMdaNisuvaMte (savasaM. 6; avareV. 717-214); vividha kameRVMdirxyavAdi\break tanAmxtarx naBa pavamAna shiKi vAri vishavxMBara ava{\ra} paMciV\-karaNa paMcaviMshatitatatxvXnivahadobubxLi (keYvapa. 45-9-1); A mahA\-BUtaMgaLolaviniMda irade paMciVkaqtiyumAgi berasalekx paMkaruha gaBARMDaM carAcaraM deVhAdiyurujananavalilx\break paMciV\-karaNaveMbudeV muKayxvaha BUtavadhaRM uLididaR\break BUtaMgaLadhaRvadhaRM (viVsheYpu. 5-77-10).}
 \artha{mishArxpaRNa, SaTasxthXla, aSATxvaraNa, liMga matutx aMgasAmarasayx eMba aidu viSayagaLa samiVkaraNa:}
@@ -15534,7 +15506,30 @@ paMcAsayxvAhini paMceVshavarade parx | paMcelalxdagajAte pAhi\\[-1pt]
 \vskip 4pt
 \newmeaning{\artha{jAcnxneVMdirxyapaMcaka : kaNuNx, nAlage, mUgu, camaR matutx kivi eMba aidu jAcnxneVMdirxya\-gaLu.}}
 \vskip 4pt
-\newmeaning{\arthanonum{\qquad vAsatxvavAgi kameRVMdirxya, jAcnxneVMdirxya, itAyxdi\-gaLu BUta\-paMcakagaLa vividha parxmANada misharxNa\-gaLu. yAva BUta uLida yAva BUtagaLoDane eSuTx parxmANadalilx seVridare\break yAva tatatxvX\-gaLu huTuTxtatxde eMbudara jAcnxnaveV paMciV\-karaNada jAcnxna. paMciVkaraNada jAcnxnadiMdAgi, nAvu \hbox{kameRVMdirxya}, jAcnxneVMdirxya itAyxdigaLa bagege tiLidukoMDare avanunx AdhAyxtimxka jiVvanakekx heVge parivatiRsikoLaLxbahudeMbudanunx tiLidukoLaLxbahudu. AdudariMda paMciVkaraNada jAcnxna keVvala bwdidhxka taqpitxgAgi alalx, AdhAyxtimxka parxyoVjanakAkxgi eMba \hbox{mAtanunx} vacanakAraru otitx heVLidAdxre.}}
+\newmeaning{\arthanonum{ipapxtetxYdu tatatxvXgaLa utapxtitxge anukUla\-vAgiruva paqthivx, apf, teVjasf, vAyu, AkAshagaLeMba paMcamahA\-BUtagaLalilx parxtiyoMdanUnx aidaneya oMdu BAgavAgi vagiRVkaraNa mADuva parxkirxye. I riVtiyAgi parxteyxVkisalapxTaTx aMshagaLanunx vayxvasithxtavAgi seVrisuvudariMda ipapxtetxYdu tatatxvXgaLa utapxtitxyAguvike. parxtiyoMdu mahABUtada eraDaneya BAgadalilx (25$\%$) uLida BUtagaLa adhaRBAgAMsha\-gaLanunx seVrisabeVku.}}
+\medskip
+\begin{shl}
+EkeYkaM divxvidhaM kaqtAvx taterxYkeYkaM paqthagf disheVtf ||\\[2pt]
+shiSeTxYkaM samAdAya punashacx viBajeVdf divxdhA |\\[2pt]
+divxdhA viBaketxV tatetxYkaM saMsAthxpayxnayxM catuviRdhamf ||\\[2pt]
+kuyARdeVvaM viBAgeV sAyxtf BUtameVkaM tu SaDivxdhamf |\\[2pt]
+sUthxlAMshAnf paMcaBUtAnAM paqthageVva vinikiSxpeVtf ||\\[2pt]
+paMcaviMshatitatAtxvXni BUtAMsheYH paMcapaMcaBiH |\\
+\end{shl}
+\medskip
+\pauthor{(shi.tara., BA-1, 1.7.45-48)}
+\medskip
+\newmeaning{\arthanonum{AkAshatatatxvXgaLu (AkAshatatatxvXdiMda uMTAguva paMcakagaLu): AkAshadalilx AkAshatatatxvXda seVruvikeyiMda jAcnxna (100{\boldmath$\%$}), AkAshadalilx vAyuvina seVruvikeyiMda manasusx (AkAsha\break 75{\boldmath$\%$} + vAyu 25{\boldmath$\%$}); AkAshadalilx teVjasisxna aMshada seVruvikeyiMda budidhx (AkAsha 75{\boldmath$\%$} + teVjasf 25{\boldmath$\%$}); AkAshadalilx jalAMsha seVruvikeyiMda citatx (AkAsha 75{\boldmath$\%$} + jala 25{\boldmath$\%$}); AkAshadalilx BUmayxMshada seVruvikeyiMda ahaMkAra (AkAsha 75{\boldmath$\%$} + BUmi 25{\boldmath$\%$})gaLa utapxtitx.}}
+\vskip 6pt
+\newmeaning{\arthanonum{vAyutatatxvXgaLu (vAyutatatxvXdiMda uMTAguva paMcakagaLu): vAyuvinalilx vAyutatatxvXda seVruvike\-yiMda vAyxna (100{\boldmath$\%$}); vAyuvinalilx AkAshatatatxvXda seVruvike\-yiMda samAna (vAyu 75{\boldmath$\%$} + AkAsha 25{\boldmath$\%$}); vAyuvinalilx teVjasisxna aMshada seVruvikeyiMda udAna (vAyu 75{\boldmath$\%$} + teVjasf 25{\boldmath$\%$}); vAyuvinalilx jalAMshada seVruvikeyiMda apAna (vAyu 75{\boldmath$\%$} + jala 25{\boldmath$\%$}); vAyuvinalilx BUmiya aMshada seVruvikeyiMda pArxNa (vAyu 75{\boldmath$\%$} + BUmi 25{\boldmath$\%$})gaLa utapxtitx.}}
+\vskip 6pt
+\newmeaning{\arthanonum{teVjasf tatatxvXgaLu (teVjasf tatatxvXda seVrivike\-yiMda uMTAguva paMcakagaLu): teVjasisxnalilx teVjsf tatatxvXda seVruvike\-yiMda kaNuNx (100{\boldmath$\%$}), teVjasisxnalilx AkAshAMshada seVruvike\-yiMda kivi (teVjasf 75{\boldmath$\%$} + AkAsha 25{\boldmath$\%$}); teVjasisxnalilx vAyavxMshada seVruvikeyiMda camaR (teVjsf 75{\boldmath$\%$}\break + vAyu 25{\boldmath$\%$}); teVjasisxnalilx jalAMshada seVruvikeyiMda\break nAlage (teVjsf 75{\boldmath$\%$} + jala 25{\boldmath$\%$}); teVjasisxnalilx \hbox{BUmayxMshada} seVruvikeyiMda mUgu (teVjsf 75{\boldmath$\%$} + BUmi 25{\boldmath$\%$})gaLu utapxtitxyAgutatxve.}}
+\vskip 6pt
+\newmeaning{\arthanonum{jalatatatxvXgaLu (jalatatatxvXkekx itara tatatxvXgaLa seVruvikeyiMda uMTAguva tatatxvXgaLu): jalakekx jaladaMshada seVruvikeyiMda rasa (100\%); jalakekx AkAshAMshada seVruvikeyiMda shabadx (jala 75\% + AkAsha 25\%); jalakekx vAyavxMshada seVruvikeyiMda sapxshaR (jala 75\% + vAyu 25\%); jalakekx teVjasisxna aMshada seVruvikeyiMda rUpa (jala 75\% + teVjasf 25\%); jalakekx paqthavxyXMshada seVruvikeyiMda gaMdha (jala 75\% + BUmi 25\%)gaLa utapxtitx.}}
+\vskip 6pt
+\newmeaning{\arthanonum{paqthivx tatatxvXgaLu (paqthivx tatatxvXkekx itara tatatxvXgaLa seVruvikeyiMda uMTAguva tatatxvXgaLu): paqthivxge paqthavxyXMshada seVruvikeyiMda pAyu (100\%); paqthivxge AkAshAMshada seVruvikeyiMda vAkf (paqthivx 75\% + AkAsha 25\%); paqthivxge vAyavxMshada seVruvike\-yiMda pANi (paqthivx 75\% + vAyu 25\%); paqthivxge teVjasisxna aMshada seVruvikeyiMda pAda (paqthivx 75\% + teVjasf 25\%); paqthivxge jalAMshada seVruvikeyiMda upasathx (paqthivx 75\% + jala 25\%)gaLa utapxtitx.}}
+\smallskip
+\pauthor{(shi.ta.ra., BAga-1, 1-7. 48-55)}
 \smallskip
 \newmeaning{\arthanonum{Iga paMciVkaraNada vivaragaLanunx parishiVlisoVNa.}}
 \medskip
@@ -18469,16 +18464,16 @@ sadABxvABiKayxhasetxVna BakAsxyX samarasAKayxyA ||\\[-1pt]
 \newmeaning{\ni{parxsAdasayx vAkayxM - parxsAdavAkayxM}}
 \end{entry}
 
-\begin{entry}
-\word{parxsAdavikAri}\label{parxsAdavikAri1}
-\src{va}
-\meaning{\arthanonum{parxsAdiyu tAneV parxsAdavAgi parivatiRta\-nAguvudu:}
-\ullekha{parxsAdavikArige manoVvikAra\-veMbudilalx (savasaM. 1; basava. 796-202).}}
-\vskip 5pt
-\newmeaning{\ni{parxsAdasayx vikAraH asimxnf asitx iti - parxsAdavikAriV}}
-\vskip 3pt
-\newmeaning{\arthanonum{\SEE{parxsAda}}}
-\end{entry}
+%\begin{entry}
+%\wword{parxsAdavikAri}\llabel{parxsAdavikAri1}
+%\src{va}
+%\meaning{\arthanonum{parxsAdiyu tAneV parxsAdavAgi parivatiRta\-nAguvudu:}
+%\ullekha{parxsAdavikArige manoVvikAra\-veMbudilalx (savasaM. 1; basava. 796-202).}}
+%\vskip 5pt
+%\newmeaning{\ni{parxsAdasayx vikAraH asimxnf asitx iti - parxsAdavikAriV}}
+%\vskip 3pt
+%\newmeaning{\arthanonum{\SEE{parxsAda}}}
+%\end{entry}
 
 \begin{entry}
 \word{parxsAdakamaR}\label{parxsAdakamaR}
@@ -24041,7 +24036,7 @@ BakitxreVva paramAthaRdAyiniV BakitxreVva paratatatxvXveVdiniV |\\[-1pt]
 \medskip
 \pauthor{(pa. saM. 11)}
 \smallskip
-\pauthor{(IuviV. ??-19)}
+\pauthor{(IuviV. puTa. 19)}
 \smallskip
 \newmeaning{\artha{BakitxyeMdare Bakatxnu guru, liMga, jaMgamagaLige toVrisuva pirxVti, vishAvxsa matutx gwrava. guruvu shiSayxnige \hbox{iSaTxliMga} diVkeSxyanunx mADi, viVrasheYva dhamaRda AcAragaLanunx boVdhisi, shiSayxnu AdhAyxtimxka pathadalilx sAguvAga avanige mAgaRdashaRna niVDuvudariMda avanu guru\-vige kaqtajacnxteyanunx toVrisaloVsakxra Bakitxyanunx toVrisabeVku.}}
 \vskip 3pt
@@ -25952,7 +25947,7 @@ datAtxvX ca BAvanAM liMgeV BAvashudidhxrihoVcayxteV |\\[-2pt]
 BAvashudidhxH paraM shwcaM parxdhAnaM savaRkamaRsu\\[-2pt]
 \end{shl}
 \smallskip
-\pauthor{(viVmAA. ??-134)}
+\pauthor{(viV{A}u. puTa. 134)}
 %\newmeaning{\ullekha{tananx kAyada meVlaNa liMgakekx, satatx haLeya nAyiya arasitaMdu aTaTxda meVle irisikoMDu, gadAyxNa gadAyxNa tUkava koMDaMte kANA. BAvashudidhxyalilx koTaTxlalxde koMDanAdaDe... (savasaM. 3; cenanxba. 1281-451); jaMgamaliMgada taqpitxyiMda tananx tA hAri saMsAra kulagiriya dAMTi swrASaTxrX soVmeVshavxraliMgadalilx BAvashudidhxyiMdipapxnayAyx... (savasaM. 6; Adayayx. 852-258); BAvashudidhxyAgade kemamxne tapupxgoMba jaDa narananeMtu guruveMbe ? (savasaM. 7; caMdima. 657-214); kAyada meVlaNa liMgadalilx, BAvashudidhxyiMdoDaMbaDisi koTuTx koLabalalxne balalx... (savasaM. 8; maDimA. 701-259); A moVhadiMda shakitxhuTaTxlu, adariMdAda bAvashudidhx, BAvashudidhxyiMda nirAlasayxvAgi, alilx shivadhamaR, A shivadhamaRdalilx niVrajatavx. (savasaM. 9; soDaDxbA. 781-236).}}
 \vskip 5pt
 \newmeaning{\ni{BAvasayx shudidhxH - BAvashudidhxH}}
