--- a/tex-for-print/ya-La.tex
+++ b/tex-for-print/ya-La.tex
@@ -15865,7 +15865,7 @@ samayaH sakalAvasathxH sajajxnaH SaDivxdhasatxthA ||\\[-1pt]
 \begin{entry}
 \word{SaDivxdhasamapaRNe}\label{SaDivxdhasamapaRNe}
 \src{va}
-\meaning{\arthanonum{Bakatxsathxlada sAdhakana padAthaR\-gaLanunx guruliMgajaMgamakUkx, sugaMdhavasutxgaLanunx AcAraliMgakUkx samapiRsabeVku. maheVsha sathxlada sAdhakanu haNuNx modalAda rasaBarita vasutxgaLanunx guruliMgakUkx, parxsAdisathxlada sAdhakanu piVta, shevxVta muMtAda vasAtxrXdigaLanunx, shivaliMgakUkx, pArxNa\-liMgada sAdhakanu kwpiVna, uDudAra muMtAda padAthaR\-gaLanunx (aMdare, sapxshaRnavanunx) tananx satikxrXyegaLa mUlaka\break jaMgama\-liMgakUkx, sharaNasathxlada sAdhakanu shabodxV\-tApxdaka vasutx\-gaLAda gaMTe, taMtivAdayxgaLu muMtAda vasutxgaLanunx (aMdare\break shabadxvanunx) parxsAdaliMgakUkx, koneyadAgi, aikayxsathxlada \hbox{sAdhakanu} tanenxlalxvanUnx mahAliMgakekx samapiRsi, paripUNaR taqpitx paDeyabeVku:} \ullekha{I SaDivxdha \hbox{darxvayx} padAthaRM\-gaLu doreya\-didadxre mUlacitatx moda\-lAda aMga mana pArxNa iMdirxya karaNa viSayaMgaLa A shirxVguruviMge jaMgamada somumxsaMbaMdhadalilx nilisuvude savARMgaliMgApaRNavAgipuRdu (savasaM. 14; mUrumu. ???-???)}}
+\meaning{\arthanonum{Bakatxsathxlada sAdhakana padAthaR\-gaLanunx guruliMgajaMgamakUkx, sugaMdhavasutxgaLanunx AcAraliMgakUkx samapiRsabeVku. maheVsha sathxlada sAdhakanu haNuNx modalAda rasaBarita vasutxgaLanunx guruliMgakUkx, parxsAdisathxlada sAdhakanu piVta, shevxVta muMtAda vasAtxrXdigaLanunx, shivaliMgakUkx, pArxNa\-liMgada sAdhakanu kwpiVna, uDudAra muMtAda padAthaR\-gaLanunx (aMdare, sapxshaRnavanunx) tananx satikxrXyegaLa mUlaka\break jaMgama\-liMgakUkx, sharaNasathxlada sAdhakanu shabodxV\-tApxdaka vasutx\-gaLAda gaMTe, taMtivAdayxgaLu muMtAda vasutxgaLanunx (aMdare\break shabadxvanunx) parxsAdaliMgakUkx, koneyadAgi, aikayxsathxlada \hbox{sAdhakanu} tanenxlalxvanUnx mahAliMgakekx samapiRsi, paripUNaR taqpitx paDeyabeVku:} \ullekha{I SaDivxdha \hbox{darxvayx} padAthaRM\-gaLu doreya\-didadxre mUlacitatx moda\-lAda aMga mana pArxNa iMdirxya karaNa viSayaMgaLa A shirxVguruviMge jaMgamada somumxsaMbaMdhadalilx nilisuvude savARMgaliMgApaRNavAgipuRdu (savasaM. 14; mUrumu. 39-43)}}
 \vskip 5pt
 \newmeaning{\ni{SaDivxdhaM ca tatf samapaRNeM ca - SaDivxdha samapaRNeM}}
 \end{entry}
@@ -17270,12 +17270,6 @@ QutagaM satayxM paraM barxhamx puruSaM kaqSaNxpiMgalamf |\\[-1pt]
 \end{shl}
 \medskip
 \pauthor{(ma. nA. u., 10, 11)}
-\medskip
-\begin{shl}
-mUliVBUtaM sadoVkatxM ca satayxjAcnxnamanaMtakamf | 60\\[-1pt]
-\end{shl}
-\medskip
-\pauthor{(??-??-?? 61)}
 \smallskip
 \newmeaning{\ullekha{nimamx satayxsharaNara suLuhu toVrutitxdeyayAyx (savasaM. 5; akakxma. 151-47).} \artha{heVLida mAtige takakxMte naDeyuvudu satayxshiVla. satayx\-shiVlavu satayxvanunx mAtarx heVLuvudanunx oLagoLuLxtatxde.} \artha{satayxdiMda mADuva Bakitx eMbalilx idakekx nijavAda \hbox{Bakitx} eMba athaRvide:} \ullekha{satayxdiMda mADuva Bakitx, katARrana kamamxTakekx horagAyitu (savasaM. 9; shivaleM. 220-74).} \artha{ApeVkiSxka matutx anApeVkiSxka eMdu satayxvu eraDu vidha. maNuNx modalAdavugaLa savxrUpa ApeVkiSxka satayx, EkeMdare parxLayakAladalilx adara aBAvaviruvudeV Agide. barxhamxsavxrUpa anApeVkiSxka satayx. EkeMdare adu yAvAgalU iruvudeV Agide:}}
 \medskip
@@ -17556,7 +17550,7 @@ mayiVshavxreV mahAdeVvi sadaBxkitxraBidhiVyateV ||\\[-1pt]
  nAnu pArxrabadhxmaM miVralApeRneV\\[-1pt]
 \end{shl}
 \medskip
-\pauthor{(vimapu. 38-??)}
+\pauthor{(vimapu. 38)}
 \smallskip
 \newmeaning{\ullekha{sadAcAra sadaBxkitxyilalxdavaranolalxnayAyx, avarAdAdhane daMDa (savasaM. 1; basava. 651-163); pArxNaliMgi sharaNa aikayxneMdu, mana vacana kAyadalilx sadaBxkitxsaMpananx basavaNaNx (savasaM. 3; cenanxba. 1414-506); esaLa maMTapadalilx kusuma\-nALada BeVda shashi\-dharana masatxkada dhavaLagiriya osaruva AnaMda vipariVta bASapxvenalesediduRdeYde sadaBxkitxkirxVyu (savasaM. 4; sidadhxrA. 343-99); basavaNANx, nimamx sadaBxkitxya tiLidu enage nijavu sAdhayxvAyitatxyAyx (savasaM. 5; akakxma. 300-89).}}
 \vskip 5pt
@@ -18662,17 +18656,17 @@ saparxkAMDamidaM shiVlaM vijecnxVyaM BakitxsAdhanamf ||\\[-1pt]
 \newmeaning{\arthanonum{\SEE{sadAcAra}}}
 \end{entry}
 
-\vskip -3pt
+%\vskip -3pt
 
-\begin{entry}
-\word{sapatxmAtaqke}\label{sapatxmAtaqke2}
-\src{va}
-\meaning{\arthanonum{bArxhimxV, mAheVshavxriV, kwmAriV, \hbox{veYSaNxviV}, vArAhiV, iMdArxNiV matutx cAmuMDA eMba ELu shakitxdeVvate\-gaLu:}
-\ullekha{dugiRge kanakada liMga, sapatxmAtaqkeyarige maLala liMga (savasaM. 6; Adayayx. 1145-360); I BUmige dakiSxNa\-deseyAgi utatxra pariyaMtara barxhamx maheVshavxri kwmAri veYSaNxvi varAhi mAheVMdirx cAmuMDiyeMba sapatxmAtaqkeyaru iharu... (savasaM. 13; bAlasaM. 242-94); amaragaNaru ELunU\char'273\char'311papxtutx mAtaqkeyarenisikoMbeVLu shakitx\-gaLu ...ELeMTu deVshada janavideVLuteYtaMdive (keYvapa. 14-1).}}
+%\begin{entry}
+%\wword{sapatxmAtaqke}\llabel{sapatxmAtaqke2}
+%\src{va}
+%\meaning{\arthanonum{bArxhimxV, mAheVshavxriV, kwmAriV, \hbox{veYSaNxviV}, vArAhiV, iMdArxNiV matutx cAmuMDA eMba ELu shakitxdeVvate\-gaLu:}
+%\ullekha{dugiRge kanakada liMga, sapatxmAtaqkeyarige maLala liMga (savasaM. 6; Adayayx. 1145-360); I BUmige dakiSxNa\-deseyAgi utatxra pariyaMtara barxhamx maheVshavxri kwmAri veYSaNxvi varAhi mAheVMdirx cAmuMDiyeMba sapatxmAtaqkeyaru iharu... (savasaM. 13; bAlasaM. 242-94); amaragaNaru ELunU\char'273\char'311papxtutx mAtaqkeyarenisikoMbeVLu shakitx\-gaLu ...ELeMTu deVshada janavideVLuteYtaMdive (keYvapa. 14-1).}}
 %\newmeaning{\ni{mAtuH AgatA - mAtaqkA}}
-\end{entry}
+%\end{entry}
 
-\vskip 3pt
+\vskip -3pt
 
 \begin{entry}
 \word{sapotxVdaka}\label{sapotxVdaka}
@@ -20583,7 +20577,7 @@ pArxNaliMgiparxsAdiVti davxyaM BoVgAMgamiSayxteV ||\\[-1pt]
 
 \begin{entry}
 \word{savxyaMBu}\label{savxyaMBu}
-\meaning{\artha{taninxMda tAneV mUDida; tAnAgiyeV huTiTxda:} \ullekha{adara savxyaMBu shoVBege sharaNeMdu shudadhxrAdevu (sharaca. 834).} \artha{savxyaMparxkAshavuLaLxdu:} \ullekha{AkAshada sUyaR halavu kuMBadalilx toVruva tera maredare parxtiSeThx aridaDe savxyaMBu (savasaM. ????; moVLimA. 12-41).} \artha{yAra aMkegU oLapaDadiruvudu; savxtaMtarxvAdudu:} \ullekha{A uBayada biDugaDeyanaridu aDagiyalalxde savxyaMBuvalilx (savasaM. 2; moVLimA. 2-3).}}
+\meaning{\artha{taninxMda tAneV mUDida; tAnAgiyeV huTiTxda:} \ullekha{adara savxyaMBu shoVBege sharaNeMdu shudadhxrAdevu (sharaca. 834).} \artha{savxyaMparxkAshavuLaLxdu:} \ullekha{AkAshada sUyaR halavu kuMBadalilx toVruva tera maredare parxtiSeThx aridaDe savxyaMBu (savasaM. 8; moVLimA. 12-41).} \artha{yAra aMkegU oLapaDadiruvudu; savxtaMtarxvAdudu:} \ullekha{A uBayada biDugaDeyanaridu aDagiyalalxde savxyaMBuvalilx (savasaM. 2; moVLimA. 2-3).}}
 \end{entry}
 
 %\begin{entry}
@@ -23683,7 +23677,7 @@ haraH keVvalakuMBAboyxV...\\[-1pt]
 \smallskip
 \pauthor{(shiva.yoV.pu. 2-3-5.26)}
 \smallskip
-\newmeaning{\ullekha{maMtarxyoVga haThayoVga layayoVga jAcnxnayoVga \hbox{iMtiV} elAlx yoVgavana\char'273\char'236du ma\char'273\char'311du BakitxyoVgada meVle niMdu rAjayoVgada meVle naDeva nuDiva kANiro (cananxba. ???; ka. 636-1424); CeVdana cAlana doVhanAdi kirxVyayxMgaLiMde pecicxdaR jihevxyanu BUrxmadhayxsAthxnakekxV\char'273\char'236si sithxradaqSiTxyAgihudeV haTha\-yoVga (aKaMDeV. 214-54); yoVgapaMcakaveMbudavake vivaraM keVLu rAgadiMdaM maMtarxyoVga layayoVga haTha\-yoVgavA rAjayoVgaM kUDe shivayoVgaveMdeYdu (viVsheYpu. 7-105-14).}
+\newmeaning{\ullekha{maMtarxyoVga haThayoVga layayoVga jAcnxnayoVga \hbox{iMtiV} elAlx yoVgavana\char'273\char'236du ma\char'273\char'311du BakitxyoVgada meVle niMdu rAjayoVgada meVle naDeva nuDiva kANiro (cananxba. ka. 636-1424); CeVdana cAlana doVhanAdi kirxVyayxMgaLiMde pecicxdaR jihevxyanu BUrxmadhayxsAthxnakekxV\char'273\char'236si sithxradaqSiTxyAgihudeV haTha\-yoVga (aKaMDeV. 214-54); yoVgapaMcakaveMbudavake vivaraM keVLu rAgadiMdaM maMtarxyoVga layayoVga haTha\-yoVgavA rAjayoVgaM kUDe shivayoVgaveMdeYdu (viVsheYpu. 7-105-14).}
 \artha{maMtarxyoVga, layayoVga, haThayoVga, rAja\-yoVga matutx shivayoVgagaLeMba yoVgapaMcakadalilx oMdu:}
 \ullekha{yoVgapaMcakaveMbudavake vivaraM keVLu rAgadiMdaM maMtarxyoVga layayoVga haThayoVgavA rAjayoVgaM kUDe shivayoVgaveMdeYdu (viVsheYpu. 7-105-14).}}
 \vskip 5pt
