correction in progress

--- a/tex-for-print/anubandha-1.tex
+++ b/tex-for-print/anubandha-1.tex
@@ -1,10 +1,10 @@
 %\begin{multicols}{2}
 \begin{center}
-{\huge\bfseries anubaMdha 1}
+{\Large\bfseries anubaMdha 2}
 
-\smallskip
+\medskip
 
-{\huge\bfseries hecicxna pAriBASika padagaLu}
+{\Large\bfseries hecucxvari pAriBASika padagaLu}
 \end{center}
 
 \medskip
