corrections in progress

--- a/jss-anukramanike1.tex
+++ b/jss-anukramanike1.tex
@@ -1239,7 +1239,7 @@
 
 {AraMga}, \pageref{AraMga}
 
-{Ara(\char'273)kaSxra}, \pageref{Ara(273)kaSxra}
+{ArakaSxra}, \pageref{Ara(273)kaSxra}
 
 {Arati}, \pageref{Arati}
 
@@ -1247,7 +1247,7 @@
 
 {ArAdhayx}, \pageref{ArAdhayx}
 
-{Aru(\char'273\char'304)aMgasathxla}, \pageref{Aru(273304)aMgasathxla}
+{{Aru}aMgasathxla}, \pageref{Aru(273304)aMgasathxla}
 
 {Arucakarx}, \pageref{Arucakarx}
 
@@ -1257,7 +1257,7 @@
 
 {AruliMga}, \pageref{AruliMga}
 
-{Aru(\char'273\char'304)shakitx}, \pageref{Aru(273304)shakitx}
+{Arushakitx}, \pageref{Aru(273304)shakitx}
 
 {Arusathxla}, \pageref{Arusathxla}
 
@@ -1354,6 +1354,8 @@
 {iSaTxliMga(pA)padoVdaka}, \pageref{iSaTxliMga(pA)padoVdaka}
 
 {iSaTxliMgapUje}, \pageref{iSaTxliMgapUje}
+
+{iSaTxliMga catuviRdha pUje}, \pageref{iSaTxliMga catuviRdha pUje}
 
 {iSaTxliMgasaMbaMdha}, \pageref{iSaTxliMgasaMbaMdha}
 
@@ -1850,8 +1852,6 @@
 {kalABeVda}, \pageref{kalABeVda}
 
 {kale}, \pageref{kale}
-
-{kalegaLu}, \pageref{kalegaLu}
 
 {kavacamaMtarx}, \pageref{kavacamaMtarx}
 
@@ -6687,7 +6687,7 @@
 
 {mishArxpaRNoVdadhxraNe}, \pageref{mishArxpaRNoVdadhxraNe}
 
-{miVri(\ri)dasathxla}, \pageref{miVriridasathxla}
+{miVridasathxla}, \pageref{miVridasathxla}
 
 {miVsalu}, \pageref{miVsalu}
 
@@ -7282,6 +7282,8 @@
 {liMgAcaRna}, \pageref{liMgAcaRna}
 
 {liMgAcaRnavidhi}, \pageref{liMgAcaRnavidhi}
+
+{liMgAcaRnaBeVda}, \pageref{liMgAcaRnaBeVda}
 
 {liMgAcaRne}, \pageref{liMgAcaRne}
 
