format in progress

--- a/tex-for-print/anubandha-2.tex
+++ b/tex-for-print/anubandha-2.tex
@@ -1,10 +1,10 @@
-\chapter*{anubaMdha - 2}
+\chapter*{anubaMdha 2}
 
 \lhead[]{}
 \rhead[]{}
 
 \begin{center}
-{\large\bf viVrasheYva pAriBASika kananxDa padakoVsha saMpuTakekx pada saMgarxha\break mADikoTiTxruva kananxDa vidAvxMsarugaLa vivara}
+{\large\bf viVrasheYva pAriBASika kananxDa padakoVsha saMpuTakekx padasaMgarxha\break mADikoTiTxruva vidAvxMsarugaLa vivara}
 \end{center}
 
 {\renewcommand{\arraystretch}{1.4}
@@ -20,17 +20,17 @@
 \hline
 \endfoot
 \endlastfoot
-1 & shirxV hiV.ci. shAMtaviVrayayx, beMgaLUru\\
+1 & porx. hiV.ci. shAMtaviVrayayx, beMgaLUru\\
 \hline
 2 & porx. esf. umApati, dAvaNagere\\
 \hline
 3 & porx. ecf.vi. viVraBadarxyayx, tumakUru\\
 \hline
-4 & DA. saMgameVsha savadatitx maTha, dhAravADa\\
+4 & DA. saMgameVsha savadatitxmaTha, dhAravADa\\
 \hline
 5 & porx. shAMtA imArxpUra, dhAravADa\\
 \hline
-6 & DA. vi.ji. pUjAra, gulabagAR\\
+6 & DA. vihx.ji. pUjAra, gulabagAR\\
 \hline
 7 & DA. ke.ecf. sarasavxti, meYsUru\\
 \hline
@@ -54,13 +54,13 @@
 \hline
 17 & porx. bi.naM. caMdarxyayx, meYsUru\\
 \hline
-18 & DA. shiVlakumAri, meYsUru\\
+18 & DA. shiVlAkumAri, meYsUru\\
 \hline
-19 & DA. eM.ji. nAgarAju, beMgaLUru\\
+19 & DA. eM.ji. nAgarAjf, beMgaLUru\\
 \hline
-20 & DA. uSAkiraNf, beMgaLUru\\
+20 & DA. uSA kiraNf, beMgaLUru\\
 \hline
-21 & DA. hecf.Ti. sheYlaja, meYsUru\\
+21 & DA. ecf.Ti. sheYlaja, meYsUru\\
 \hline
 22 & DA. bi.vihx. shirUra, hubabxLiLx\\
 \hline
@@ -68,7 +68,7 @@
 \hline
 24 & DA. eM.si. saroVjamamxNeNx, meYsUru\\
 \hline
-25 & DA. hecf.eM. maheVshavxrayayx, dhAravADa\\
+25 & DA. ecf.eM. maheVshavxrayayx, dhAravADa\\
 \hline
 26 & DA. ke.Arf. sidadhxgaMgamamx, beLagAM\\
 \hline
@@ -106,13 +106,13 @@
 \hline
 2 & DA. anitA, beMgaLUru\\
 \hline
-3 & DA. karibasava rAjeVMdarxsAvxmiVji, baLALxri\\
+3 & DA. karibasavarAjeVMdarx sAvxmiVji, baLALxri\\
 \hline
 4 & porx. pi.enf. caMdarxsheVKarayayx, tumakUru\\
 \hline
 5 & shirxV bi.esf. jagadiVshf, beMgaLUru\\
 \hline
-6 & DA. niraMjanabAbu, beMgaLUru\\
+6 & DA. niraMjana bAbu, beMgaLUru\\
 \hline
 7 & DA. parxBusAvxmi, meYsUru\\
 \hline
@@ -121,4 +121,3 @@
 9 & porx. selavxlapx, beMgaLUru\\
 \hline
 \end{longtable}}
-
